module(name = "jupyterlab_pachyderm")

bazel_dep(name = "rules_python", version = "0.31.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.9",
)

# Load in both the strict and dev requirements for the jupyter extension.
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    python_version = "3.9",
    hub_name = "pip-requirements",
    requirements_lock = "//:requirements-lock.txt",
)
pip.parse(
    python_version = "3.9",
    hub_name = "pip-requirements-dev",
    requirements_lock = "//:requirements-dev-lock.txt",
)
use_repo(pip, "pip-requirements", "pip-requirements-dev")
