[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=4.0.11"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["jupyterlab_pachyderm/labextension/static/style.js"]
ensured-targets = ["jupyterlab_pachyderm/labextension/static/style.js", "jupyterlab_pachyderm/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["npm"]

[tool.check-manifest]
ignore = ["jupyterlab_pachyderm/labextension/**", ".*", "package-lock.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["no_config"]
