[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
platforms = Linux, Mac OS X, Windows
classifiers =
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Framework :: Jupyter
  Framework :: Jupyter :: JupyterLab
  Framework :: Jupyter :: JupyterLab :: 3
  Framework :: Jupyter :: JupyterLab :: Extensions
  Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
packages = find:
install_requires =
  pyyaml>=6.0
  jupyter_server>=2.7.0,<2.8
include_package_data = True
zip_safe = False
python_requires = >=3.8,<4

[options.extras_require]
dev=
  black==21.10b0
  build==0.7.0
  check-manifest==0.47
  jupyter_packaging~=0.10.0,<2
  jupyterlab>=3.0.14,<4
  pytest==6.2.5
  pytest-asyncio==0.16.0
  pytest-tornasync==0.6.0.post2
  pytest-jupyter
  twine==3.7.1
