filegroup(
    name = "all_protos",
    srcs = glob(["**/*.proto"]) + [
        "//src/admin:protos",
        "//src/auth:protos",
        "//src/debug:protos",
        "//src/enterprise:protos",
        "//src/identity:protos",
        "//src/internal/clusterstate/v2.5.0:protos",
        "//src/internal/collection:protos",
        "//src/internal/config:protos",
        "//src/internal/metrics:protos",
        "//src/internal/pfsload:protos",
        "//src/internal/ppsdb:protos",
        "//src/internal/ppsload:protos",
        "//src/internal/storage/chunk:protos",
        "//src/internal/storage/fileset:protos",
        "//src/internal/storage/fileset/index:protos",
        "//src/internal/task:protos",
        "//src/internal/tracing/extended:protos",
        "//src/license:protos",
        "//src/pfs:protos",
        "//src/pjs:protos",
        "//src/pps:protos",
        "//src/protoextensions:protos",
        "//src/proxy:protos",
        "//src/server/pfs/server:protos",
        "//src/server/worker/common:protos",
        "//src/server/worker/datum:protos",
        "//src/server/worker/pipeline/transform:protos",
        "//src/task:protos",
        "//src/transaction:protos",
        "//src/version/versionpb:protos",
        "//src/worker:protos",
    ],
    visibility = ["//src/proto:__pkg__"],
)
